# xenta-software-center

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.status  configure  configure.ac  gitpush  xenta-software-center  xenta-software-center.desktop  xenta-software-center.desktop.in
data/: categories.ini  categories.ini.in  lsc.ui  preferences.ui
data/man/: xenta-software-center-build-db.1  xenta-software-center.1
debian/: changelog  control  copyright  rules  watch  xenta-software-center.manpages  xenta-software-center.postinst  xenta-software-center.postinst.debhelper  xenta-software-center.prerm.debhelper  xenta-software-center.triggers
po/: .intltool-merge-cache  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  ar.gmo  ar.po  bg.gmo  bg.po  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  de.gmo  de.po  el.gmo  el.po  en_AU.gmo  en_AU.po  en_CA.gmo  en_CA.po  en_GB.gmo  en_GB.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fa.gmo  fa.po  fi.gmo  fi.po  fr.gmo  fr.po  gl.gmo  gl.po  (+50 more)
scripts/: xenta-software-center-build-db  xenta-software-center-download-review  xenta-software-center-download-scrot
src/: UI.py  __init__.py  control.py  main.py  notify.py  preferences.py  testnet.py  threadingops.py
src/widgets/: appsinfo.py  appsview.py  basket.py  categories.py  pages.py  screenshot.py  searchentry.py  statusbox.py  toolbar.py
